// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`findEdgesInDependencies > should find an edge 1`] = `
Payload {
  "childs": [
    Payload {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": null,
      "languages": {},
      "name": "2",
      "parent": undefined,
      "path": [
        "/",
      ],
      "tech": null,
      "techs": Set {},
    },
    Payload {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "2",
          "0.0.0",
        ],
      ],
      "edges": [
        {
          "portSource": "right",
          "portTarget": "left",
          "read": true,
          "to": Payload {
            "childs": [],
            "dependencies": [],
            "edges": [],
            "id": "2",
            "inComponent": null,
            "languages": {},
            "name": "2",
            "parent": undefined,
            "path": [
              "/",
            ],
            "tech": null,
            "techs": Set {},
          },
          "vertices": [],
          "write": true,
        },
      ],
      "id": "3",
      "inComponent": null,
      "languages": {},
      "name": "3",
      "parent": undefined,
      "path": [
        "/",
      ],
      "tech": null,
      "techs": Set {},
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "1",
  "inComponent": null,
  "languages": {},
  "name": "main",
  "parent": undefined,
  "path": [
    "",
  ],
  "tech": null,
  "techs": Set {},
}
`;

exports[`flatten > should flatten and merge dependencies 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "aa",
          "0.0.0",
        ],
      ],
      "edges": [],
      "id": "2",
      "inComponent": null,
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "bb",
          "0.0.0",
        ],
      ],
      "edges": [],
      "id": "3",
      "inComponent": null,
      "languages": {},
      "name": "3",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [
    [
      "npm",
      "bb",
      "0.0.0",
    ],
    [
      "npm",
      "aa",
      "0.0.0",
    ],
  ],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
    "",
  ],
  "tech": null,
  "techs": [],
}
`;

exports[`flatten > should flatten and merge host 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": "4",
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "4",
      "inComponent": null,
      "languages": {},
      "name": "4",
      "path": [
        "/",
      ],
      "tech": "vercel",
      "techs": [
        "vercel",
      ],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "6",
      "inComponent": "4",
      "languages": {},
      "name": "6",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
    "",
  ],
  "tech": null,
  "techs": [
    "vercel",
  ],
}
`;

exports[`flatten > should flatten but not merge 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "2",
      "inComponent": "4",
      "languages": {},
      "name": "2",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "4",
      "inComponent": null,
      "languages": {},
      "name": "4",
      "path": [
        "/",
      ],
      "tech": "vercel",
      "techs": [
        "vercel",
      ],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "6",
      "inComponent": "4",
      "languages": {},
      "name": "6",
      "path": [
        "/",
      ],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "new",
  "inComponent": null,
  "languages": {},
  "name": "flatten",
  "path": [
    "/",
  ],
  "tech": null,
  "techs": [],
}
`;
